style/main3.css
* {
    box-sizing: border-box;
    font-family: Verdana, Arial;
}

/* Columns */
div [class*="col-"] {
    display: inline-block;
}
.col-1 {width: 8.33%;}
.col-2 {width: 16.66%;}
.col-3 {width: 25%;}
.col-4 {width: 33.33%;}
.col-5 {width: 41.66%;}
.col-6 {width: 50%;}
.col-7 {width: 58.33%;}
.col-8 {width: 66.66%;}
.col-9 {width: 75%;}
.col-10 {width: 83.33%;}
.col-11 {width: 91.66%;}
.col-12 {width: 100%;}

/* HEADER & MENU STYLING*/

.heading {
    display: block;
    position: fixed;
    top: 0%;
    width: 100%
}

#title {
    color: white;
    float: left
}

#menu {
    
}

.heading img {
    height: 75px;
    width: 75px;
    float: left;
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #333333;
}

li {
    float: left;
}

li a {
    display: block;
    color: white;
    text-align: center;
    padding: 16px;
    text-decoration: none;
}

li a:hover {
    color: #8d8d8d;
}

#username {
    padding-left: 20px;
    padding-top: 25px;
    font-size: 25pt;
    font-weight: bold;
    margin: 0px;
    display: inline-block;
}

#personal-information-title {
    display: none;
}

.tablet-tabs-section {
    text-align: center;
    background-color: lightgray;
    padding: 5px;
    display: none;
}

.mobile-tabs-section {
    text-align: center;
    background-color: lightgray;
    padding: 5px;
    display: none;
    position: fixed;
    bottom: 0;
    width: 100%;
}

.mobile-tabs-section ul li {
    width: 33%;
    font-size: 10px;
    border: solid lightgray;
}

/* BODY STYLING*/
body {
    margin: 0px;
    padding: 0px;
}

.body-container {
    margin: 0px;
    padding: 0px;
}

.left-container, .right-container {
    background-color: #000000;
    float: left;
    padding: 10px;
}

.left-container {
    background-color: #ffffff;
}

.left-container img {
    height: 75px;
    width: 75px;
    object-fit: cover;
    border-radius: 50%;
    padding: 0px 0px 0px 0px;
}

.right-container {
    background-color: lightgray;
}

.clearfix:after {
    content: "";
    display: table;
    clear: both;
}

.restaurant {
    font: 15px Verdana;
    font-weight: bold;
    color: #0070c9;
    padding-top: 15px;
    margin-bottom: 0px;
    border-top: 2px solid gray;
}

.restaurant:hover {
    text-decoration: underline;
}

.comment {
    font: 10pt Verdana;
    margin-top: 0px;
}
.preferences-section {
    background: lightgray;
    width: 100%;
    float: left;
}

.preference {
    background: #ffffff;
    color: #0070c9;
    border-radius: 15%;
    height: 20px;
    float: left;
    margin: 10px;
    padding: 5px 5px 25px 5px;
}

.preference img {
    height: 20px;
    width: 20px;
    padding: 3px;
    float: right;
}
/*FOOTER STYLING*/
.footer {
    padding-left: 20px;
    padding-top: 25px;
}

.vertical-line {
    border: solid 1px;
    height: 50%;
    padding: 0px;
    width: 0px;
    margin: 0px;
    display: inline;
}

.fa {
    padding: 8px 8px 8px 8px;
    font-size: 30px;
    width: 30px;
    height: 30px;
    text-align: center;
    text-decoration: none;
    margin: 5px 2px;
    border-radius: 50%;
}

.fa-facebook {
    background: #3B5998;
    color: white;
}

.fa-twitter {
    background: #1DA1F2;
    color: white;
}

.fa-instagram {
    background: #E1306C;
    color: white;
}

.fa-linkedin {
    background: #0077B5;
    color: white;
}

.fa-plus {
    background: #0070c9;
    color: #FFFFFF;
    margin: 15px;
}

.fa-close {
    color: #0070c9;
    padding: 0px;
    margin: 0px;
}

/*PERSONAL INFORMATION*/
form input {
    padding: 4px;
    margin-bottom: 10px;
    float: left;
    width: 50%;
}

form input[name="email"] {
    width: 100%;
}

form input[name="birthday"] {
    width: 100%;
}

/* My App Activity*/
.app-activity {
}

.activity-icon {
    float: left;
    background: #000000;
    color: white;
    text-align: center;
    border-radius: 50%;
    width: 75px;
    height: 75px;
    padding: 0px;
    margin: 20px;
}

.activity-icon h3 {
    margin: 0px;
    margin-top: 20%;
}

/* Mobile Styles */
@media only screen and (max-width: 400px) {
    body {
        background-color: #F09A9D;
        padding-top: 50px;
        /* Red */
    }
    div [class*="col-"] {
        width: 100%;
    }
    form input {
        width: 100%;
    }
    .left-container {
        display: none;
    }
    .mobile-tabs-section {
        display: block;
    }
    footer {
        padding-bottom:75px;
    }
    #title {
        font-size: 15px;
    }
    .menu {
        display: none;
    }
    .heading img {
        height: 30px;
        width: 30px;
        margin: 5px;
        float: left;
    }
    #app-activity-title {
        display: none;
    }
}

/* Tablet Styles */
@media only screen and (min-width: 401px) and (max-width: 960px) {
    body {
        background-color: #F5CF8E; /* Yellow */
        padding-top: 150px;
    }
    div [class*="col-"] {
        width: 100%;
    }
    .left-container {
        display: none;
    }
    .tablet-tabs-section {
        display: block;
    }
}

/* Desktop Styles */
@media only screen and (min-width: 961px) {
    body {
        background-color: #B2D6FF; 
        padding-top: 100px;
        /* Blue */
    }
    .body-container {
        display: flex;
    }
    #personal-information-title {
        display: block;
    }
}

